# Robotic-Simulation-GATE

./: .gitignore  .gitmodules  QuickStart.md  README.md  dataset_generation.sh  evaluate_openvla.sh  evaluate_vlms.sh  requirements.txt  setup.py
UniVLA/: .gitignore  =0.27.0  (+2 more)
autogpt-p/autogpt_p/: =1.0.0  pyproject.toml
autogpt-p/autogpt_p/autogpt_p/evaluation/: alternative_suggestion_evaluation.py  alternative_suggestion_evaluation_config.py  alternative_suggestion_scenario.py  autogpt_p_evaluation.py  autogpt_p_evaluation_config.py  autogpt_p_evaluation_scenario.py  incremental_goal_evaluation.py  incremental_goal_evaluation_config.py  incremental_goal_evaluation_scenario.py  planner_evaluation.py  planner_evaluation_config.py  planner_evaluation_scenario.py  simulated_scene.py
autogpt-p/autogpt_p/autogpt_p/execution/: actor.py  actor_skill_mapping.py  pddl_scenario.py  plan_executor.py
autogpt-p/autogpt_p/autogpt_p/exploration/: exploration_memory.py
autogpt-p/autogpt_p/autogpt_p/helpers/: Bert.py  check_distance_min_max_avg.py  dnf.py  embeddings_other_environment.csv  embeddings_other_objects.csv  embeddings_reformated.csv  name_helpers.py  output_other_environment_leonard  paths.py  prolog_wrapper.py  saycan_plan_v0_l.csv  scene_read_write.py  semantic_similarity.py  singleton.py  tokens.py
autogpt-p/autogpt_p/autogpt_p/incremental_goal_memory/: Experimente.py  distances.csv  evaluation_memory.csv  evaluation_memory_other_environment.csv  evaluation_memory_other_objects.csv  evaluation_memory_reformated.csv  incremental_goal_memory.py  known_pairs.csv  reset_memory.py  save_memory_from_file.py  test.csv
autogpt-p/autogpt_p/autogpt_p/input/: console_input_manager.py  input_manager.py  input_manager_factory.py  simulated_user.py
autogpt-p/autogpt_p/autogpt_p/llm/: chat_gpt_interface.py  distances.csv  llm_factory.py  llm_interface.py
autogpt-p/autogpt_p/autogpt_p/planning/: autogpt_planner.py  goal_validator.py  planner.py  validation_error_handler.py
autogpt-p/autogpt_p/autogpt_p/simulation/: autogpt_p_simulator.py  distances.csv
autogpt-p/autogpt_p/autogpt_p/state_machine/: auto_gpt_p_context.py  auto_gpt_p_memory.py  state.py
autogpt-p/autogpt_p/autogpt_p/substitution/: affordance_based_substituiton.py  naive_substitution.py  substitution.py  substitution_memory.py
autogpt-p/autogpt_p/autogpt_p/tools/: correction.py  explore.py  partial_plan.py  plan.py  suggest_substitution.py  tool.py  tool_selector.py  tool_selector_factory.py
autogpt-p/autogpt_p/data/prolog_environment/: execution.txt
autogpt-p/autogpt_p/data/prolog_example/: minimal_action_execution_environment.pl
autogpt-p/autogpt_p/logs/: README.md
autogpt-p/chat_gpt_oam/: pyproject.toml
autogpt-p/chat_gpt_oam/chat_gpt_oam/: chat_gpt_object_affordance_mapping.py
autogpt-p/chat_gpt_oam/chat_gpt_oam/logical_expressions/: expression_parser.py  logical_expression.py
autogpt-p/chat_gpt_oam/chat_gpt_oam/tools/: rate_manager.py  singleton.py
autogpt-p/chat_gpt_oam/data/: script.py
autogpt-p/chat_gpt_oam/data/affordances/: basic_affordances.json  basic_affordances_alternative.csv  error.csv  error.json  proposed_affordances.json  proposed_affordances_alternative.json
autogpt-p/chat_gpt_oam/data/classes/: classes.csv  classes.json  objects365_classes.csv  objects365_classes.json  random_classes.csv  random_classes.json  simulation_classes.csv  simulation_classes.json  simulation_classes_.csv  simulation_classes_.json  simulation_classes_test.csv  simulation_classes_test.json
autogpt-p/chat_gpt_oam/evaluation/: oam_simulation_gpt_3_binary_basic.csv  oam_simulation_gpt_3_binary_logic_basic.csv  oam_simulation_gpt_3_list_affordances_basic.csv  oam_simulation_gpt_3_list_objects_basic.csv  oam_simulation_gpt_4_binary_basic.csv  oam_simulation_gpt_4_binary_logic_basic.csv  oam_simulation_gpt_4_list_affordances_basic.csv  oam_simulation_gpt_4_list_objects_basic.csv
autogpt-p/chat_gpt_oam/ground_truth/: simulation_classes_ground_truth.csv  simulation_classes_ground_truth.json  simulation_classes_ground_truth_.csv  simulation_classes_ground_truth_.json  simulation_classes_ground_truth_basic.csv
autogpt-p/chat_gpt_oam/results/: experiment_oam.json  ground_truth.csv
autogpt-p/chat_gpt_oam/results/evaluation/: oam_simulation_gpt_3_binary_basic.csv  oam_simulation_gpt_3_binary_basic.json  oam_simulation_gpt_3_binary_logic_basic.csv  (+13 more)
autogpt-p/chat_gpt_oam/tools/: class_name_helper.py  evalaution_config.py  evaluation.py  fix_jsons.py  json_csv.py  random_class_selection.py
autogpt-p/object_affordance_mapping/: pyproject.toml
autogpt-p/object_affordance_mapping/examples/: basic_usage.py
autogpt-p/object_affordance_mapping/object_affordance_mapping/: object_affordance_mapping.py
autogpt-p/object_affordance_mapping/tools/: json_csv.py
autogpt-p/object_detection/: pyproject.toml
autogpt-p/object_detection/object_detection/: bounding_box_helpers.py  detection_memory_segment.py
autogpt-p/pddl/: pyproject.toml
autogpt-p/pddl/pddl/: core.py  domain.py  plan.py  problem.py
autogpt-p/planning_memory/: pyproject.toml
autogpt-p/planning_memory/planning_memory/: actor_provider.py  capability_provider.py  dynamic_actor_provider.py  dynamic_capability_provider.py  planning_memory_segment.py  static_actor_provider.py  static_capability_provider.py
autogpt-p/planning_memory/tools/: capability_tools.py
(+613 files in other folders)
