[tool.poetry]
name = "object_affordance_mapping"
version = "0.1.0"
description = "Mapping of object classes to affordance types"
authors = ["Hidden F. Review"]
packages = [{include = "object_affordance_mapping"}]
include = ["data/**/*"]
readme = "README.md"
keywords = ["robotics", "humanoid robots", "toolbox"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Robot Framework "
]

[tool.poetry.dependencies]
python = ">=3.8.0"
scipy = "*"
matplotlib = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^0.5.2"
toml = "^0.10.2"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
