[tool.poetry]
name = "object_detection"
version = "0.1.0"
description = "Object Detection Relevant Classes"
packages = [{include = "object_detection"}]
authors = ["Hidden F. Review"]
readme = "README.md"
keywords = ["robotics", "humanoid robots", "toolbox"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Robot Framework "
]

[tool.poetry.dependencies]
python = ">=3.6.9" #,<3.11.0"
opencv-python = ">=4.7.0"
lxml = ">=4.8.0"
numpy = ">=1.19.5"
transforms3d = ">=0.4.1"
scikit-learn = ">=1.3.2"
dataclasses = { version = ">=0.8", python = "<3.7" }


[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^0.5.2"
toml = "^0.10.2"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

